--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Display Image</title>
 </head>
 <body>
-    <img src="https://www.israeldefense.co.il/sites/default/files/2024-06/pexels-pixabay-247763.jpg" alt="Image" />
+    <img src="https://cdn.britannica.com/36/22536-050-E22B1D13/Flag-Union-of-Soviet-Socialist-Republics.jpg" alt="Image" />
 </body>
 </html>
